change std::pair in std::map for error_pages.

--- a/webserv.conf
+++ b/webserv.conf
@@ -2,5 +2,5 @@ server {
     listen 127.0.0.1:8082;
     server_name localhost;
     root /usr/local/wordpress;
-
-
+    error_page 303 /lol/303.html;
+}
