--- a/webserv.conf
+++ b/webserv.conf
@@ -1,6 +1,21 @@
 server {
     listen 127.0.0.1:8082;
     server_name localhost;
-    root /usr/local/wordpress;
+    root /usr/local/wordpress/;
     error_page 303 /lol/303.html;
+
+	location /php/ {
+		root /pages;
+	}
+}
+
+server {
+    listen 127.0.0.1:8082;
+    server_name lol;
+    root /usr/local/test/;
+    error_page 303 /lol/303.html;
+
+	location / {
+		root /lol/flo;
+	}
 }
