--- a/webserv.conf
+++ b/webserv.conf
@@ -10,8 +10,8 @@ server {
 }
 
 server {
-    listen 127.0.0.1:8082;
-    server_name lol;
+    listen localhost:8080;
+    server_name localhost;
     root /usr/local/test/;
     error_page 303 /lol/303.html;
 
