Un bug vraiment etrange.

--- a/webserv.conf
+++ b/webserv.conf
@@ -11,7 +11,7 @@ server {
 
 server {
     listen localhost:8080;
-    server_name localhost;
+    server_name lol;
     root /usr/local/test/;
     error_page 303 /lol/303.html;
 
