--- a/webserv.conf
+++ b/webserv.conf
@@ -7,15 +7,7 @@ server {
 	location /php/ {
 		root /pages;
 	}
-}
-
-server {
-    listen localhost:8080;
-    server_name lol;
-    root /usr/local/test/;
-    error_page 303 /lol/303.html;
-
-	location / {
-		root /lol/flo;
+    location /uri {
+        root /usr/local/lol;
 	}
 }
