--- a/webserv.conf
+++ b/webserv.conf
@@ -1,13 +1,46 @@
 server {
-    listen 127.0.0.1:8082;
-    server_name localhost;
-    root /usr/local/wordpress/;
-    error_page 303 /lol/303.html;
-
-	location /php/ {
-		root /pages;
+	server_name	test      lol     raaah;
+	listen 	255.21.2.1:8082;
+	client_max_body_size 10M;
+	root /PWD/www/content;
+	error_page 404 /custom_404.html;
+	error_page 500 /custom_50x.html;
+	location /salut {
+		index 		index.php lol.php;
+		methods 	GET POST;
+		root 		/PWD/www/content;
+		autoindex	off;
+		client_max_body_size 10M;
+		auth_basic "salut les gamers c'est wartek";
+		cgi_extension .php .cgi;
 	}
-    location /uri {
-        root /usr/local/lol;
+}
+
+server {
+	server_name	test      lol     raaah;
+	listen 	255.21.2.1:8080;
+	client_max_body_size 10M;
+	root /lol/dude/omg;
+	error_page 404 /custom_404.html;
+	error_page 500 /custom_50x.html;
+	location / {
+		index 		index.php lol.php;
+		methods 	GET POST;
+		root 		/lol/dude/omg;
+		autoindex	off;
+		client_max_body_size 10M;
+		auth_basic "salut les gamers c'est wartek";
+		auth_basic_user_file /yo;
+		cgi_extension .php .cgi;
+	}
+
+	location /lol {
+		index 		index.php lol.php;
+		methods 	GET POST;
+		root 		/lol/dude/omg;
+		autoindex	off;
+		client_max_body_size 10M;
+		auth_basic "salut les gamers c'est wartek";
+		cgi_extension .php .cgi;
 	}
 }
