location matching with uri done

--- a/webserv.conf
+++ b/webserv.conf
@@ -8,6 +8,14 @@ server {
 		index 		index.php lol.php;
 		methods 	GET POST;
 	}
+	location /toto {
+		index 		index.php lol.php;
+		methods 	GET POST;
+	}
+	location /fav/aa {
+		index 		index.php lol.php;
+		methods 	GET POST;
+	}
 }
 
 server {
