--- a/webserv.conf
+++ b/webserv.conf
@@ -12,7 +12,7 @@ server {
 		index 		index.php lol.php;
 		methods 	GET POST;
 	}
-	location /fav/aa {
+	location /fav {
 		index 		index.php lol.php;
 		methods 	GET POST;
 	}
@@ -20,7 +20,7 @@ server {
 
 server {
 	server_name	test;
-	listen	127.0.0.1:8082;
+	listen	127.125.0.2:8082;
 	root /PWD/www/content;
 	error_page 404 /custom_404.html;
 	error_page 500 /custom_50x.html;
