configuration of request fully done

--- a/webserv.conf
+++ b/webserv.conf
@@ -14,13 +14,13 @@ server {
 	}
 	location /fav {
 		index 		index.php lol.php;
-		methods 	GET POST;
+		methods 	GET POST DELETE;
 	}
 }
 
 server {
 	server_name	test;
-	listen	127.125.0.2:8082;
+	listen	127.0.0.1:8082;
 	root /PWD/www/content;
 	error_page 404 /custom_404.html;
 	error_page 500 /custom_50x.html;
