add error_pages in location.

--- a/webserv.conf
+++ b/webserv.conf
@@ -1,5 +1,5 @@
 server {
-	server_name	test;
+	server_name	lol adam;
 	listen 	0.0.0.0:8080;
 	root /PWD/www/content;
 	error_page 404 /custom_404.html;
@@ -15,11 +15,14 @@ server {
 	location /fav {
 		index 		index.php lol.php;
 		methods 	GET POST DELETE;
+		error_page 500 /custom_50x.html;
+		error_page 404 /custom_40x.html;
+		error_page 402 /custom_402.html;
 	}
 }
 
 server {
-	server_name	test;
+	server_name	test yohann;
 	listen	127.0.0.1:8082;
 	root /PWD/www/content;
 	error_page 404 /custom_404.html;
