--- a/webserv.conf
+++ b/webserv.conf
@@ -1,7 +1,7 @@
 server {
 	server_name	lol adam;
 	listen 	0.0.0.0:8080;
-	root /PWD/www/content;
+	root ./pages/;
 	error_page 404 /custom_404.html;
 	error_page 500 /custom_50x.html;
 	location /salut {
