response methods WIP, error_codes WIP

--- a/webserv.conf
+++ b/webserv.conf
@@ -1,7 +1,7 @@
 server {
 	server_name	lol adam;
 	listen 	0.0.0.0:8080;
-	root ./pages/;
+	root /pages/;
 	error_page 404 /custom_404.html;
 	error_page 500 /custom_50x.html;
 	location /salut {
@@ -15,17 +15,17 @@ server {
 	location /fav {
 		index 		index.php lol.php;
 		methods 	GET POST DELETE;
-		error_page 500 /custom_50x.html;
-		error_page 404 /custom_40x.html;
-		error_page 402 /custom_402.html;
+		error_page 500 /home/adjemaa/seth/pages/error_pages/500.html;
+		error_page 404 /home/adjemaa/seth/pages/error_pages/404.html;
+		error_page 402 /home/adjemaa/seth/pages/error_pages/402.html;
 	}
 }
 
 server {
 	server_name	test yohann;
 	listen	127.0.0.1:8082;
-	root /PWD/www/content;
-	error_page 404 /custom_404.html;
+	root /home/adjemaa/seth;
+	error_page 405 /pages/error_pages/405.html;
 	error_page 500 /custom_50x.html;
 	location /salut {
 		index 		index.php lol.php;
