get method partially done, CGI integration in get method WIP

--- a/webserv.conf
+++ b/webserv.conf
@@ -24,9 +24,10 @@ server {
 server {
 	server_name	test yohann;
 	listen	127.0.0.1:8082;
-	root /home/adjemaa/seth;
-	error_page 405 /pages/error_pages/405.html;
-	error_page 500 /custom_50x.html;
+	root /Users/adjemaa/42adam/webserv/pages;
+	error_page 405 /error_pages/405.html;
+	error_page 403 /error_pages/403.html;
+	error_page 500 /error_pages/500.html;
 	location /salut {
 		index 		index.php lol.php;
 		methods 	GET POST;
