--- a/webserv.conf
+++ b/webserv.conf
@@ -24,12 +24,19 @@ server {
 server {
 	server_name	test yohann;
 	listen	127.0.0.1:8082;
-	root /Users/adjemaa/42adam/webserv/pages;
+	root /home/adjemaa/seth/pages;
 	error_page 405 /error_pages/405.html;
 	error_page 403 /error_pages/403.html;
+	error_page 404 /error_pages/404.html;
 	error_page 500 /error_pages/500.html;
 	location /salut {
-		index 		index.php lol.php;
+		index 		index.html lol.php;
+		autoindex 	on;
 		methods 	GET POST;
+	}
+	location / {
+		index 		index.html lol.php;
+		autoindex 	on;
+		methods 	GET DELETE;
 	}
 }
