:rotating_light: FIX FOR COMPILATION, MOVE FOLDERS :rotating_light:

--- a/webserv.conf
+++ b/webserv.conf
@@ -1,9 +1,11 @@
 server {
 	server_name	lol adam;
 	listen 	0.0.0.0:8080;
-	root /pages/;
-	error_page 404 /custom_404.html;
-	error_page 500 /custom_50x.html;
+	root /mnt/nfs/homes/mlormois/web2/pages;
+	error_page 405 /error_pages/405.html;
+	error_page 403 /error_pages/403.html;
+	error_page 500 /error_pages/500.html;
+	error_page 404 /error_pages/404.html;
 	location /salut {
 		index 		index.php lol.php;
 		methods 	GET POST;
@@ -15,23 +17,19 @@ server {
 	location /fav {
 		index 		index.php lol.php;
 		methods 	GET POST DELETE;
-		error_page 500 /home/adjemaa/seth/pages/error_pages/500.html;
-		error_page 404 /home/adjemaa/seth/pages/error_pages/404.html;
-		error_page 402 /home/adjemaa/seth/pages/error_pages/402.html;
 	}
 }
 
 server {
 	server_name	test yohann;
-	listen	127.0.0.1:8082;
-	root /home/adjemaa/seth/pages;
+	listen	127.0.0.1:8081;
+	root /mnt/nfs/homes/mlormois/web2/pages;
 	error_page 405 /error_pages/405.html;
 	error_page 403 /error_pages/403.html;
 	error_page 404 /error_pages/404.html;
 	error_page 500 /error_pages/500.html;
 	location /salut {
 		index 		index.html lol.php;
-		autoindex 	on;
 		methods 	GET POST;
 	}
 	location / {
