add current path to root.

--- a/webserv.conf
+++ b/webserv.conf
@@ -1,7 +1,7 @@
 server {
 	server_name	lol adam;
 	listen 	0.0.0.0:8080;
-	root /mnt/nfs/homes/mlormois/web2/pages;
+	root /pages;
 	error_page 405 /error_pages/405.html;
 	error_page 403 /error_pages/403.html;
 	error_page 500 /error_pages/500.html;
@@ -23,7 +23,7 @@ server {
 server {
 	server_name	test yohann;
 	listen	127.0.0.1:8081;
-	root /mnt/nfs/homes/mlormois/web2/pages;
+	root /pages;
 	error_page 405 /error_pages/405.html;
 	error_page 403 /error_pages/403.html;
 	error_page 404 /error_pages/404.html;
