--- a/webserv.conf
+++ b/webserv.conf
@@ -29,7 +29,8 @@ server {
 	error_page 404 /error_pages/404.html;
 	error_page 500 /error_pages/500.html;
 	location /salut {
-		index 		index.html lol.php;
+		autoindex	on;
+		root 		/pages;
 		methods 	GET POST;
 	}
 	location / {
