--- a/webserv.conf
+++ b/webserv.conf
@@ -36,6 +36,6 @@ server {
 	location / {
 		index 		index.html lol.php;
 		autoindex 	on;
-		methods 	GET DELETE;
+		methods 	GET DELETE POST;
 	}
 }
