construct base of cgi programm.

--- a/webserv.conf
+++ b/webserv.conf
@@ -34,8 +34,10 @@ server {
 		methods 	GET POST;
 	}
 	location / {
-		index 		index.html lol.php;
-		autoindex 	on;
-		methods 	GET DELETE POST;
+		index 			index.html lol.php;
+		autoindex 		on;
+		methods 		GET DELETE POST;
+		cgi_path		/ubuntu_cgi_tester;
+		cgi_extension	.cgi;
 	}
 }
