cgi almost done.

--- a/webserv.conf
+++ b/webserv.conf
@@ -37,7 +37,7 @@ server {
 		index 			index.html lol.php;
 		autoindex 		on;
 		methods 		GET DELETE POST;
-		cgi_path		/ubuntu_cgi_tester;
+		cgi_path		/cgi_tester;
 		cgi_extension	.cgi;
 	}
 }
