default error page handling done

--- a/webserv.conf
+++ b/webserv.conf
@@ -30,6 +30,7 @@ server {
 	error_page 500 /error_pages/500.html;
 	location / {
 		autoindex	on;
+		client_max_body_size	500;
 		root 		/pages;
 		methods 	GET POST;
 	}
