--- a/webserv.conf
+++ b/webserv.conf
@@ -29,16 +29,10 @@ server {
 	error_page 404 /error_pages/404.html;
 	error_page 500 /error_pages/500.html;
 	location / {
-		autoindex	on;
-		client_max_body_size	500;
-		root 		/pages;
-		methods 	GET POST;
-	}
-	location /salut {
 		index 			index.html lol.php;
 		autoindex 		on;
 		methods 		GET DELETE POST;
-		cgi_path		/cgi_tester;
+		cgi_path		/cgi_python.py;
 		cgi_extension	.cgi;
 	}
 }
