updated cgi to properly handle cgi path+extension, some POST methods tweaks so it works smoothly for the client no matter the test, updated some files in /pages

--- a/webserv.conf
+++ b/webserv.conf
@@ -6,6 +6,10 @@ server {
 	error_page 403 /error_pages/403.html;
 	error_page 500 /error_pages/500.html;
 	error_page 404 /error_pages/404.html;
+	location / {
+		autoindex on;
+		methods GET POST;
+	}
 	location /salut {
 		index 		index.php lol.php;
 		methods 	GET POST;
@@ -32,7 +36,7 @@ server {
 		index 			index.html lol.php;
 		autoindex 		on;
 		methods 		GET DELETE POST;
-		cgi_path		/cgi_python.py;
-		cgi_extension	.cgi;
+		cgi_path		/cgi_python;
+		cgi_extension	.py;
 	}
 }
