handling different CGIs

--- a/webserv.conf
+++ b/webserv.conf
@@ -9,6 +9,8 @@ server {
 	location / {
 		autoindex on;
 		methods GET POST;
+		cgi_path		/submit;
+		cgi_extension	.cgi;
 	}
 	location /salut {
 		index 		index.php lol.php;
