--- a/webserv.conf
+++ b/webserv.conf
@@ -7,8 +7,8 @@ server {
 	error_page 500 /error_pages/500.html;
 	error_page 404 /error_pages/404.html;
 	location / {
-		autoindex on;
-		methods GET POST;
+		autoindex 		on;
+		methods 		GET;
 		cgi_path		/submit;
 		cgi_extension	.cgi;
 	}
