--- a/webserv.conf
+++ b/webserv.conf
@@ -35,7 +35,8 @@ server {
 	error_page 404 /error_pages/404.html;
 	error_page 500 /error_pages/500.html;
 	location / {
-		autoindex 		off;
+		index 			index.html lol.php;
+		autoindex 		on;
 		methods 		GET DELETE POST;
 		cgi_path		/cgi_python;
 		cgi_extension	.py;
